@@ -19,3 +19,10 @@ sv (Swedish) - Daniel Nylander <dnylander@users.sourceforge.net>
 fr (French) - Loïc Martin <loic.martin3@gmail.com>
 pl (Polish) - Jarek Sobolewski <r@sledinmay.com>
 
+The following people translated GXMame:
+de (German) - Tobias Wichtrey <tobias@tarphos.d>
+el (Greek) - Νίκος Παναγίδης <anarxia@gmx.net>
+es (Spanish) - Pablo Gonzalo del Campo <pablodc@bigfoot.com>
+nl (Dutch) - Francois Duprez <duprez@planet.nl>
+zh_TW (Traditional Chinese) - Jouston Huang <jouston@jouston.no-ip.com>
+zh_CN (Simplified Chinese) - Andrew Wong <andrew@thizlinux.com>
